--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         depends_on:
             - mysql
             - mailpit
+    
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -48,6 +49,15 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    
+    adminer:
+        image: adminer
+        restart: always
+        ports:
+            - 8080:8080
+        networks:
+            - sail
+
     mailpit:
         image: 'axllent/mailpit:latest'
         ports:
@@ -55,6 +65,7 @@ services:
             - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
         networks:
             - sail
+
 networks:
     sail:
         driver: bridge
